[CR][Fix] Chat popup facebook style: update on mobile also & decrease font size of msg "You have to log in to chat"

--- a/frontend/web/less/desktop/post.less
+++ b/frontend/web/less/desktop/post.less
@@ -25,7 +25,7 @@
         border: none;
         display: block;
         border-radius: 5px 5px 0 0;
-        
+
         .head{
             height: 40px;
             .name_user{
@@ -197,7 +197,7 @@
                 }
             }
 
-            
+
             .btn-control{
                 width: 100%;
                 float: left;
@@ -275,6 +275,7 @@
     display: none;
     width: 725px;
     margin: auto;
+    z-index: 10000;
     .modal-dialog{
         width: 725px;
         min-height: 250px;
@@ -435,7 +436,7 @@
                 // display: table-cell;
                 // vertical-align: middle;
                 width: 20%;
-                float: left; 
+                float: left;
             }
             .filter_sidebar{
                 color: #eee;
@@ -444,7 +445,7 @@
                 border-collapse: separate;
                 margin: auto;
                 width: 200px;
-                td{ 
+                td{
                     width: 50px;
                     font-size: 18px;
                     border: 1px solid #eee;
@@ -452,7 +453,7 @@
                     cursor: pointer;
                     text-align: center;
                     &.active{
-                       background: #5da5d8; 
+                       background: #5da5d8;
                     }
                 }
                 td:first-child{
@@ -483,7 +484,7 @@
             .no-data{
                 text-align: center;
                 font-size: 16px;
-                padding-top: 20px;  
+                padding-top: 20px;
             }
         }
         #filter_post,#filter_view,#filter_brilliant{
