--- a/frontend/web/less/desktop/topic.less
+++ b/frontend/web/less/desktop/topic.less
@@ -6,6 +6,7 @@
     width: 725px;
     margin: auto;
     display: none;
+    z-index: 10000;
     .modal-dialog{
         width: 725px;
         min-height: 250px;
@@ -106,7 +107,7 @@
                 }
             }
         }
-        
+
         .sidebar{
             width: 100%;
             background: #5888ac;
@@ -168,7 +169,7 @@
                 // display: table-cell;
                 // vertical-align: middle;
                 width: 20%;
-                float: left; 
+                float: left;
             }
             .filter_sidebar{
                 color: #eee;
@@ -177,7 +178,7 @@
                 border-collapse: separate;
                 margin: auto;
                 width: 200px;
-                td{ 
+                td{
                     width: 50px;
                     font-size: 18px;
                     border: 1px solid #eee;
@@ -185,7 +186,7 @@
                     cursor: pointer;
                     text-align: center;
                     &.active{
-                       background: #5da5d8; 
+                       background: #5da5d8;
                     }
                 }
                 td:first-child{
@@ -216,7 +217,7 @@
             .no-data{
                 text-align: center;
                 font-size: 16px;
-                padding-top: 20px;  
+                padding-top: 20px;
             }
         }
         #tab_feed{
