--- a/frontend/web/less/mobile/chat_post.less
+++ b/frontend/web/less/mobile/chat_post.less
@@ -287,7 +287,7 @@
                 outline: none;
                 box-shadow: none;
                 text-align: center;
-                font-size: 20px;
+                font-size: 18px;
             }
             .send,.login{
                 background: #5888ac;
